# devpost-cli

./: .gitignore  .rustfmt.toml  Cargo.toml  Devpost.yml  LICENSE.txt  README.md  install.sh
src/: cli.rs  common.rs  lib.rs  main.rs
src/commands/: init.rs  list.rs  login.rs  mod.rs  preview.rs  push.rs
templates/: banner.txt
