[package]
name = "devpost-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["color", "help", "error-context", "suggestions", "usage", "std", "unicode", "wrap_help"] }
colored = "2.0.0"
indicatif = "0.17.3"
open = "3.2.0"
rpassword = "7.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
